[gd_scene load_steps=4 format=2]

[ext_resource path="res://EventNode.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0638

[sub_resource type="CircleShape2D" id=2]
radius = 26.81

[node name="EventNode" type="Node2D"]
script = ExtResource( 1 )
node_color = Color( 0.298039, 0.298039, 0.298039, 1 )
outline_color = Color( 0.494118, 0.494118, 0.494118, 1 )

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 1 )

[node name="YearLabel" type="Label" parent="."]
margin_left = -19.478
margin_top = -30.3407
margin_right = 20.522
margin_bottom = -16.3407
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventLabel" type="Label" parent="."]
margin_left = -116.0
margin_top = 14.0
margin_right = 117.0
margin_bottom = 29.0
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClearArea"]
shape = SubResource( 2 )
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
[connection signal="area_entered" from="ClearArea" to="." method="_on_ClearArea_area_entered"]
